--- a/index.html
+++ b/index.html
@@ -1,14 +1,289 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template repo</title>
+    <title>Job listings</title>
     <link rel="stylesheet" href="styles.css/normalize.css">
     <link rel="stylesheet" href="styles.css/styles.css">
 </head>
 <body>
-    
+    <header class="site-header"></header>
+    <main class="site-main container">
+        <div class="card left-border">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9(0).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Photosnap</span>
+                            <span class="new green-text">NEW!</span>
+                            <span class="featured black-text">FEATURED</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Senior Frontend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">1d ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">USA only</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Senior</li>
+                <li class="right-side-list-item">HTML</li>
+                <li class="right-side-list-item">CSS</li>
+                <li class="right-side-list-item">JavaScript</li>
+            </ul>
+        </div>
+        <div class="card left-border">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9.svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Manage</span>
+                            <span class="new green-text">NEW!</span>
+                            <span class="featured black-text">FEATURED</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Fullstack Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">1d ago</span>
+                            <span class="bottom-text">Part Time</span>
+                            <span class="bottom-text">Remote</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item"></li>
+                <li class="right-side-list-item">Fullstack</li>
+                <li class="right-side-list-item">Midweight</li>
+                <li class="right-side-list-item">Python</li>
+                <li class="right-side-list-item">React</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (1).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Account</span>
+                            <span class="new green-text">NEW!</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Junior Frontend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">2d ago</span>
+                            <span class="bottom-text">Part Time</span>
+                            <span class="bottom-text">USA only</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">React</li>
+                <li class="right-side-list-item">Sass</li>
+                <li class="right-side-list-item">JavaScript</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (2).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">MyHome</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Senior Frontend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">5d ago</span>
+                            <span class="bottom-text">Contract</span>
+                            <span class="bottom-text">USA only</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">CSS</li>
+                <li class="right-side-list-item">JavaScript</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (3).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Loop Studios</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Senior Frontend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">1w ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">USA Worldwide</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Fullstack</li>
+                <li class="right-side-list-item">Midweight</li>
+                <li class="right-side-list-item">JavaScript</li>
+                <li class="right-side-list-item">Sass</li>
+                <li class="right-side-list-item">Ruby</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (4).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">FaceIt</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Junior Backend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">1w ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">UK only</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Backend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">Ruby</li>
+                <li class="right-side-list-item">RoR</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (5).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Shortly</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Junior Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">2w ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">Worldwide</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">HTML</li>
+                <li class="right-side-list-item">Sass</li>
+                <li class="right-side-list-item">JavaScript</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (6).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Insure</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Junior Frontend Developer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">2w ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">USA only</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">Vue</li>
+                <li class="right-side-list-item">JavaScript</li>
+                <li class="right-side-list-item">Sass</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (7).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">Eyecam Co.</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Full Stack Engineer</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">3w ago</span>
+                            <span class="bottom-text">Full Time</span>
+                            <span class="bottom-text">Worldwide</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Fullstack</li>
+                <li class="right-side-list-item">Midweight</li>
+                <li class="right-side-list-item">JavaScript</li>
+                <li class="right-side-list-item">Django</li>
+                <li class="right-side-list-item">Python</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="wrapper">
+                <img class="site-img" src="img/Group 9 (8).svg" width="88" height="88" alt="logo">
+                <ul class="site-list">
+                    <li class="site-list-item">
+                        <div class="company-name">
+                            <span class="theme">The Air Filter Company</span>
+                        </div>
+                    </li>
+                    <li class="site-list-item box"><a href class="job-type">Front-end Dev</a></li>
+                    <li class="site-list-item">
+                        <div class="card-footer">
+                            <span class="bottom-text">1mo ago</span>
+                            <span class="bottom-text">Part Time</span>
+                            <span class="bottom-text">Worldwide</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="right-side-list">
+                <li class="right-side-list-item">Frontend</li>
+                <li class="right-side-list-item">Junior</li>
+                <li class="right-side-list-item">React</li>
+                <li class="right-side-list-item">Sass</li>
+                <li class="right-side-list-item">JavaScript</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
