--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="site-main container">
         <div class="card left-border">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9(0).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/photosnap.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -42,7 +42,7 @@
         </div>
         <div class="card left-border">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9.svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/manage.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -71,7 +71,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (1).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/account.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -99,7 +99,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (2).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/my-home.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -125,7 +125,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (3).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/loop-studios.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -152,7 +152,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (4).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/face-it.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -178,7 +178,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (5).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/shortly.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -205,7 +205,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (6).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/insure.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -232,7 +232,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (7).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/eyecam.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
@@ -259,7 +259,7 @@
         </div>
         <div class="card">
             <div class="wrapper">
-                <img class="site-img" src="img/Group 9 (8).svg" width="88" height="88" alt="logo">
+                <img class="site-img" src="img/the-air-filter.svg" width="88" height="88" alt="logo">
                 <ul class="site-list">
                     <li class="site-list-item">
                         <div class="company-name">
